# estan

./: .gitignore  Cargo.toml  README.md  cliff.toml
.github/workflows/: release.yml
src/: lib.rs
src/notify/: chanify.rs  email.rs  mod.rs  pushgo.rs
src/uploader/: baidu.rs  cloud189.rs  mod.rs
tests/: REAL_TESTS.md  real_notify.rs  real_upload.rs
