[package]
name = "estan"
version = "0.1.0"
edition = "2024"

[features]
default = []
uploader = []
uploader-baidu = [
    "uploader",
    "dep:chrono",
    "dep:dirs",
    "dep:md5",
    "dep:reqwest",
    "dep:serde",
    "dep:serde_json",
    "dep:tracing",
    "dep:urlencoding",
]
uploader-cloud189 = [
    "uploader",
    "dep:aes",
    "dep:base64",
    "dep:cipher",
    "dep:chrono",
    "dep:dirs",
    "dep:hex",
    "dep:hmac",
    "dep:httpdate",
    "dep:md5",
    "dep:quick-xml",
    "dep:rand",
    "dep:reqwest",
    "dep:rsa",
    "dep:serde",
    "dep:serde_json",
    "dep:sha1",
    "dep:tracing",
    "dep:url",
    "dep:urlencoding",
    "dep:uuid",
]
notify = ["dep:tracing"]
notify-chanify = ["notify", "dep:reqwest", "dep:serde_json"]
notify-email = ["notify", "dep:lettre"]
notify-pushgo = [
    "notify",
    "dep:aes-gcm",
    "dep:base64",
    "dep:hex",
    "dep:rand",
    "dep:reqwest",
    "dep:serde_json",
]

[dependencies]
aes = { version = "0.8", optional = true }
aes-gcm = { version = "0.10", optional = true }
anyhow = "1.0"
base64 = { version = "0.22", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
cipher = { version = "0.4", optional = true }
dirs = { version = "6.0", optional = true }
hex = { version = "0.4", optional = true }
hmac = { version = "0.12", optional = true }
httpdate = { version = "1", optional = true }
lettre = { version = "0.11", features = ["builder", "smtp-transport", "rustls-tls"], optional = true }
md5 = { version = "0.8", optional = true }
quick-xml = { version = "0.39", features = ["serialize"], optional = true }
rand = { version = "0.9", optional = true }
reqwest = { version = "0.13", features = ["blocking", "json", "multipart", "form", "cookies"], optional = true }
rsa = { version = "0.9", features = ["pem"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
sha1 = { version = "0.10", optional = true }
tracing = { version = "0.1", optional = true }
url = { version = "2", optional = true }
urlencoding = { version = "2.1", optional = true }
uuid = { version = "1", features = ["v4"], optional = true }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["fmt"] }
